--- a/app/views/deviceadmin.scala.html
+++ b/app/views/deviceadmin.scala.html
@@ -13,6 +13,7 @@
     <script src="@routes.Assets.at("contrib/js/bootstrap.js")" type="text/javascript"></script>
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("contrib/css/bootstrap.css")">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/site.css")">
 
@@ -25,134 +26,100 @@
     @navbar()
     <!-- Main content -->
   <div class="container" id="main-content">
+      <!-- Linked OPQBoxes Full Row Panel -->
     <div class="row">
-      <!-- Left 'Sidebar' Column -->
-      <div class="col-lg-4">
-          <!-- OPQBoxes docs -->
-          <div class="row">
-              <div class="col-lg-12">
-                  <div class="bs-callout bs-callout-primary">
-                    <h4>OPQBoxes</h4>
-                    <p>This page allows for the management of OPQBoxes.</p>
-                    <p>OPQBoxes already registered with your account will show up in the table</p>
-                    <p>Each row displays basic facts about your registered OPQBoxes.</p>
-                    <p>To update an existing box, select the "Configure OPQBox" button beside the OPQBox you would like to configure.</p>
-                    <p>To add an exisiting OPQBox you have access to, fill out the information in the "Connect to OPQBox" form.</p>
-                  </div>
-              </div>
-          </div>
-
-          <!-- Device addition form -->
-          <div class="row">
-              <div class="col-lg-12">
-                  <div class="panel panel-default">
-                      <div class="panel-heading">
-                          <h3 class="panel-title">Connect to OPQBox</h3>
-                      </div>
-                      <div class="panel-body">
-                          <form id="addDeviceForm" action="@routes.Administration.saveDevice(session.get("email"))" method="POST" class="form-horizontal">
-                              @helper.textinput("deviceId", "Device Id *", "col-sm-4", "col-sm-8", "")
-                              @helper.textinput("accessKey", "Access Key *", "col-sm-4", "col-sm-8", "")
-                              <input type="hidden" name="sharingData" id="sharingData" value="false" />
-                              <button type="submit" class="btn btn-primary btn-xs pull-right">Add OPQBox</button>
-                          </form>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-
-      <!-- Right 'Main Body' Column -->
-      <div class="col-lg-8">
+      <div class="col-lg-12">
           <!-- List of opq boxes -->
-          <div class="row">
-              <div class="col-lg-12">
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                      <span class="glyphicon glyphicon-hdd" style="margin-right: 5px;" aria-hidden="true"></span>Linked OPQBoxes
-                  </div>
-                    <div class="table-responsive">
-                      <table class="table table-striped">
-                        <thead>
-                          <th>Description</th>
-                          <th>Id</th>
-                          <th>Key</th>
-                          <th>Sharing Data</th>
-                          <th><!--Empty for configure button--></th>
-                        </thead>
-                        <tbody>
-                        @for(key <- keys) {
-                          <tr>
-                            <td>@key.getOpqDevice.getDescription</td>
-                            <td>@key.getDeviceId()</td>
-                            <td>@key.getAccessKey()</td>
-                            <td>@key.getOpqDevice.getSharingData</td>
-                            <td>
-                              <a href="@routes.Administration.configureDevice(session.get("email"), key.getAccessKey, key.getDeviceId)" class="btn btn-warning btn-xs pull-right">Configure OPQBox</a>
-                            </td>
-                          </tr>
-                        }
-                        </tbody>
-                      </table>
-                    </div>
-                </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">
+                  <span class="glyphicon glyphicon-hdd" style="margin-right: 5px;" aria-hidden="true"></span>Linked OPQBoxes
+                  <button style="margin-top:-7px" type="button" class="btn btn-default btn-sm pull-right" data-toggle="modal" data-target="#linkedOPQBoxesModal">
+                    <i class="fa fa-question-circle fa-lg"></i>
+                  </button>
+                </h3>
               </div>
-          </div>
+              <div class="table-responsive">
+                <table class="table table-striped">
+                  <thead>
+                    <th>Description</th>
+                    <th>Device Id</th>
+                    <th>Key</th>
+                    <th>Sharing Data</th>
+                    <th>Frequency Events</th>
+                    <th>Voltage Events</th>
+                    <th>Last Heartbeat</th>
+                    <th><!--Empty for configure button--></th>
+                  </thead>
+                  <tbody>
+                  @for(key <- keys) {
+                    <tr>
+                      <td>@key.getOpqDevice.getDescription</td>
+                      <td>@key.getDeviceId()</td>
+                      <td>@key.getAccessKey()</td>
+                      <td>@key.getOpqDevice.getSharingData</td>
 
-          <!-- Device Statistics -->
-          <div class="row">
-              <div class="col-lg-12">
-                  <div class="panel panel-default">
-                      <div class="panel-heading">
-                          <span class="glyphicon glyphicon-stats" style="margin-right: 5px;" aria-hidden="true"></span>OPQBox Total Events
-                          <!-- Single button -->
-                          <div class="dropdown stats-dropdown pull-right">
-                              <!--<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                  Past Day <span class="caret"></span>
-                              </button>
-                              <ul class="dropdown-menu stats-menu" role="menu">
-                                  <li><a href="#">Past Day </a></li>
-                                  <li><a href="#">Past Week </a></li>
-                                  <li><a href="#">Past Month </a></li>
-                                  <li><a href="#">All Time</a></li>
-                              </ul>-->
-                          </div>
-                      </div>
-                      <div class="table-responsive">
-                          <table class="table table-striped">
-                              <thead>
-                                  <th>Device ID</th>
-                                  <th>Frequency Events</th>
-                                  <th>Voltage Events</th>
-                                  <th>Last Heartbeat</th>
-                              </thead>
-                              <tbody>
-                                 @if(pdi != null) {
-                                     @for(devStats <- pdi.getDeviceStatsList()) {
-                                         <tr>
-                                             <td>@devStats.getDeviceID()</td>
-                                             <td>@devStats.getFreqEventCount()</td>
-                                             <td>@devStats.getVoltEventCount()</td>
-                                             @if(devStats.getIsRecentLastHeartbeat().equals(true)) {
-                                                 <td style="color : green ;">@devStats.getReadableLastHeartbeat()</td>
-                                             } else {
-                                                 <td style="color : red ;">@devStats.getReadableLastHeartbeat()</td>
-                                             }
-                                         </tr>
-                                     }
-                                 }
-                              </tbody>
-                          </table>
-                      </div>
-                  </div>
+                      @if(pdi != null) {
+                        @for(devStats <- pdi.getDeviceStatsList()) {
+                          @if(devStats.getDeviceID == key.getDeviceId) {
+                            <td>@devStats.getFreqEventCount()</td>
+                            <td>@devStats.getVoltEventCount()</td>
+                            @if(devStats.getIsRecentLastHeartbeat().equals(true)) {
+                              <td style="color : green ;">@devStats.getReadableLastHeartbeat()</td>
+                            } else {
+                              <td style="color : red ;">@devStats.getReadableLastHeartbeat()</td>
+                            }
+                          }
+                        }
+                      }
+
+                      <td>
+                        <a href="@routes.Administration.configureDevice(session.get("email"), key.getAccessKey, key.getDeviceId)" class="btn btn-warning btn-xs pull-right">Configure OPQBox</a>
+                      </td>
+                    </tr>
+                  }
+                  </tbody>
+                </table>
               </div>
+
+              <div class="panel-footer">
+                <form id="addDeviceForm" class="form-inline" action="@routes.Administration.saveDevice(session.get("email"))" method="POST" class="form-horizontal">
+                  <button type="submit" class="btn btn-primary btn-xs pull-left" style="margin-top: 7px;"><span class="glyphicon glyphicon-plus" style="margin-right: 5px;" aria-hidden="true"></span>Add OPQBox</button>
+                  @helper.textinput("deviceId", "", "col-sm-0", "col-sm-8", "Device ID")
+                  @helper.textinput("accessKey", "", "col-sm-0", "col-sm-8", "Access Key")
+                  <input type="hidden" name="sharingData" id="sharingData" value="false" />
+                </form>
+              </div>
+            </div>
           </div>
+        </div>
       </div>
     </div>
 
+      <!-- Linked OPQBoxes Modal -->
+    <div class="modal fade" id="linkedOPQBoxesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Linked OPQBoxes</h4>
+          </div>
+          <div class="modal-body">
+            <p>This page allows for the management of OPQBoxes.</p>
+            <p>OPQBoxes already registered with your account will show up in the table</p>
+            <p>Each row displays basic facts about your registered OPQBoxes.</p>
+            <p>To update an existing box, select the "Configure OPQBox" button beside the OPQBox you would like to configure.</p>
+            <p>To add an existing OPQBox you have access to, enter the Device ID and Access Key at the bottom of the panel and click 'Add OPQBox'.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Got it!</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-
-  </div>
   <script type="text/javascript">
     $(document).ready(function() {
       $('#addDeviceForm').bootstrapValidator({
