--- a/app/views/publicmonitor.scala.html
+++ b/app/views/publicmonitor.scala.html
@@ -47,12 +47,12 @@
                     <div class="row">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title">
-                                  <i class="fa fa-sliders" style="margin-right: 5px;"></i>Filter
-                                  <button style="margin-top:-7px" type="button" class="btn btn-default btn-sm pull-right" data-toggle="modal" data-target="#displayModal">
-                                    <i class="fa fa-question-circle fa-lg"></i>
-                                  </button>
-                                </h3>
+                              <h3 class="panel-title">
+                                <i class="fa fa-sliders" style="margin-right: 5px;"></i>Filter
+                                <button style="margin-top: -7px;" type="button" class="btn btn-default btn-sm pull-right" data-toggle="modal" data-target="#displayModal">
+                                  <i class="fa fa-question-circle fa-lg"></i>
+                                </button>
+                              </h3>
                             </div>
                             <div class="panel-body">
 
@@ -191,12 +191,11 @@
                     <div class="row">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title" id="events-title" style="display: inline;">
+                                <h3 class="panel-title" id="events-title">
                                   <i class="fa fa-th-list" style="margin-right: 5px;"></i>Events
-
-                                <button style="margin-top:-7px" type="button" class="btn btn-default btn-sm pull-right" data-toggle="modal" data-target="#eventsModal">
-                                  <i class="fa fa-question-circle fa-lg"></i>
-                                </button>
+                                  <button style="margin-top:-7px" type="button" class="btn btn-default btn-sm pull-right" data-toggle="modal" data-target="#eventsModal">
+                                    <i class="fa fa-question-circle fa-lg"></i>
+                                  </button>
                                 </h3>
                             </div>
                             <div class="panel-body" id="events-table">
@@ -274,7 +273,7 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h3 id="event-title" class="panel-title">
-                                  <i class="fa fa-plug" style="margin-right: 5px;"></i>Event Details
+                                  <i class="fa fa-plug" style="margin-right: 5px;"></i>Event Details - @utils.DateUtils.toDateTime(data.detailedEvent.event.getTimestamp)
                                   <button style="margin-top:-7px" type="button" class="btn btn-default btn-sm pull-right" data-toggle="modal" data-target="#eventDetailsModal">
                                     <i class="fa fa-question-circle fa-lg"></i>
                                   </button>
@@ -285,6 +284,12 @@
                                     @if(data.detailedEvent.ne(null)) {
                                         <table class="table table-condensed">
                                             <tbody>
+                                                <tr>
+                                                  <td>Timestamp</td>
+                                                  <td>
+                                                    @utils.DateUtils.toDateTime(data.detailedEvent.event.getTimestamp)
+                                                  </td>
+                                                </tr>
                                                 <tr>
                                                     <td>Frequency</td>
                                                     <td id="details-frequency">
